# home_guild_backend

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  seed.py
app/config/: database.py  get_token.py  settings.py
app/models/: entities.py  schema.py
app/repositories/: badge_repository.py  base_repository.py  log_repository.py  quest_repository.py  reward_repository.py  user_repository.py
app/routes/: admin_route.py  auth_route.py  dashboard_route.py  logs_route.py  quests_route.py  rewards_route.py
app/services/: admin_service.py  auth_service.py  gamification_service.py
